# proto

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: secret-scan.yml  test.yml
agent/: __init__.py  clickhouse_agent.py
config/: settings.py
providers/: __init__.py  local_llm.py
tests/: conftest.py  test_cli.py  test_data_tools.py  test_settings.py
tools/: clickhouse_tools.py  data_tools.py
ui/: beautiful_interface.py  minimal_interface.py  onboarding.py  settings_manager.py
utils/: logging.py
